--- a/Settings/res/values/public.xml
+++ b/Settings/res/values/public.xml
@@ -8487,6 +8487,8 @@
     <public type="id" name="zen_radio_buttons" id="0x7f0a07b0" />
     <public type="id" name="zen_radio_buttons_content" id="0x7f0a07b1" />
     <public type="id" name="zero" id="0x7f0a07b2" />
+    <public type="id" name="renovate_message" id="0x7f0a07b3" />
+    <public type="id" name="renovate_title" id="0x7f0a07b4" />
     <public type="integer" name="abc_config_activityDefaultDur" id="0x7f0b0000" />
     <public type="integer" name="abc_config_activityShortDur" id="0x7f0b0001" />
     <public type="integer" name="app_bar_elevation_anim_duration" id="0x7f0b0002" />
